[package]
name = "prop-check-rs"
version = "0.0.690"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Property-based testing Library in Rust"
repository="https://github.com/j5ik2o/prop-check-rs"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["testing", "property-based"]

[badges]
github = { repository = "j5ik2o/prop-check-rs", workflow = "ci" }

[dependencies]
log = "0.4.21"
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "1.19.0"
bigdecimal = "0.4.3"
iso-4217 = "0.1"
num-bigint = "0.4.4"
itertools = "0.13.0"
anyhow = "1.0.82"

[dev-dependencies]
env_logger = "0.11.3"
ctor = "0.2.8"
