[package]
name = "prop-check-rs"
version = "0.0.963"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Property-based testing Library in Rust"
repository="https://github.com/j5ik2o/prop-check-rs"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["testing", "property-based"]

[badges]
github = { repository = "j5ik2o/prop-check-rs", workflow = "ci" }

[dependencies]
log = "0.4.21"
rand = "0.9.0"
bigdecimal = "0.4.3"
anyhow = "1.0.82"
num_cpus = "1.16.0"

[dev-dependencies]
env_logger = "0.11.3"
ctor = "0.5.0"
criterion = "0.7.0"
num_cpus = "1.16.0"

[[bench]]
name = "rng_benchmark"
harness = false

[[bench]]
name = "gen_benchmark"
harness = false
